feat(controller): 分离创建和更新接口并完善字典功能
- 将 BaseController 中的 save 方法分离为独立的 create 和 update 方法
- 修改 create 方法使用 POST 请求，update 方法使用 PUT 请求并按 ID 更新
- 在 BaseEntity 中移除 @Builder 注解并调整版本字段序列化策略
- 添加 DictConfiguration 配置类实现字典解析功能
- 完善 ExcelExportUtil 支持 ExcelProperty 注解和 ExcelIgnore 过滤
- 添加 GlobalDictSetListener 实现全局字典回写监听器
- 添加 MyBatisFlexConfiguration 配置全局监听器
- 添加 MybatisInsertListener 和 MybatisUpdateListener 处理审计字段
- 添加安全异常处理器 RestAccessDeniedHandler 和 RestAuthenticationEntryPoint
- 修改 SysUser 实体添加性别字段字典映射和导出配置
- 移除 SysDictItem 实体的序列化版本号字段